--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.AcadMe"
         tools:targetApi="31">
         <activity
+            android:name=".Developers"
+            android:exported="false" />
+        <activity
+            android:name=".Results"
+            android:exported="false" />
+        <activity
+            android:name=".Feedback"
+            android:exported="false" />
+        <activity
             android:name=".ebook.EbookActivity"
             android:exported="false" />
         <activity
